CL: fix/odd-635 fixed windows resizing problem for Advanced Search page - search topics and the down arrow won't overlap

--- a/src/client/sdp/adv_search/adv_search.component.css
+++ b/src/client/sdp/adv_search/adv_search.component.css
@@ -171,3 +171,39 @@ input[type="file"] {
 .how-to-build {
   padding-top:15px;
 }
+
+@media screen and (min-width: 901px) {
+  button.searchButton {
+    font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  button.searchButton {
+    font-size: 15px;
+  }
+}
+
+@media screen and (min-width: 1301px) {
+  p-dropdown {
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 1300px) {
+  p-dropdown {
+    font-size: 13px;
+  }
+}
+
+@media screen and (min-width: 1301px) {
+  p-autoComplete {
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 1300px) {
+  p-autoComplete {
+    font-size: 13px;
+  }
+}
